@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<article xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
- xsi:schemaLocation="http://docbook.org/docbook-ng testdocbook3.xsd"
+<article 
  xmlns="http://docbook.org/docbook-ng"
  version="bourbon">
  <teiHeader xmlns="http://www.tei-c.org/ns/1.0">
