@@ -19,7 +19,7 @@
   <text>
     <body>
       <p>
-	<schemaSpec ident="testoucs" start="TEI" namespace="">
+	<schemaSpec ident="testoucs" start="TEI.2" namespace="">
 	  <moduleRef key="header"/>
 	  <moduleRef key="core"/>
 	  <moduleRef key="tei"/>
